# opentally

./: .gitignore  README.md  pyproject.toml
opentally/: opentally.py
opentally/atem_sync_worker/: atem_sync_worker.py
opentally/templates/: index.html
